--- a/comebuy/src/App.css
+++ b/comebuy/src/App.css
@@ -37,5 +37,15 @@
   }
 }
 
-
+/* 
+body {
+  background: #7f209c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Montserrat", sans-serif;
+  height: 100vh;
+  margin: -20px 0 50px;
+} */
 
