--- a/comebuy/src/container/LoginAndRegister/LoginRegister.css
+++ b/comebuy/src/container/LoginAndRegister/LoginRegister.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   background: #7f209c;
   display: flex;
   justify-content: center;
@@ -11,7 +11,9 @@ body {
   font-family: "Montserrat", sans-serif;
   height: 100vh;
   margin: -20px 0 50px;
-}
+} */
+
+
 
 h1 {
   font-weight: bold;
