Design UI HomePage

--- a/comebuy/src/components/BrandLine/BrandLine.css
+++ b/comebuy/src/components/BrandLine/BrandLine.css
@@ -1,5 +1,5 @@
 .BrandLine {
-    background-color: black;
+    background-color: white;
     padding: 12px;
     margin-bottom: 10px;
 }
@@ -8,10 +8,3 @@
     color: white; 
     align-self: center;
 }
-/* .MuiTypography-h6
-{
-    color: red
-}
-.a{
-    color: blue
-} */
