--- a/comebuy/src/container/LoginAndRegister/LoginRegister.css
+++ b/comebuy/src/container/LoginAndRegister/LoginRegister.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
-
 body,
 input {
   font-family: "Poppins", sans-serif;
@@ -41,7 +40,6 @@ form {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 0rem 5rem;
   transition: all 0.2s 0.7s;
   overflow: hidden;
   grid-column: 1 / 2;
@@ -51,10 +49,12 @@ form {
 form.sign-up-form {
   opacity: 0;
   z-index: 1;
+  padding-right: 17%;
 }
 
 form.sign-in-form {
   z-index: 2;
+  margin-right: 40%;
 }
 
 .title {
