--- a/comebuy/src/container/LoginAndRegister/LoginRegister.css
+++ b/comebuy/src/container/LoginAndRegister/LoginRegister.css
@@ -49,7 +49,7 @@ form {
 form.sign-up-form {
   opacity: 0;
   z-index: 1;
-  padding-right: 17%;
+  padding-right: 0%;
 }
 
 form.sign-in-form {
@@ -61,6 +61,7 @@ form.sign-in-form {
   font-size: 2.2rem;
   color: #444;
   margin-bottom: 10px;
+  margin-left: 30%;
 }
 
 .input-field {
