--- a/comebuy/src/components/LiveBanner/style.css
+++ b/comebuy/src/components/LiveBanner/style.css
@@ -1,11 +1,11 @@
 
 
-.swiper {
+.swiper-livebanner {
     width: 100%;
     height: 80%;
   }
   
-  .swiper-slide {
+  .swiper-slide-livebanner {
     text-align: center;
     font-size: 18px;
     background: #fff;
@@ -25,7 +25,7 @@
     align-items: center;
   }
   
-  .swiper-slide img {
+  .swiper-slide-livebanner img {
     display: block;
     width: 100%;
     height: 100%;
