Fix config and color in Login page

--- a/comebuy/src/container/LoginAndRegister/LoginRegister.css
+++ b/comebuy/src/container/LoginAndRegister/LoginRegister.css
@@ -25,7 +25,7 @@ section .color:nth-child(2) {
     left: 100px;
     width: 500px;
     height: 500px;
-    background: #fffd87;
+    background: #efec05;
 }
 section .color:nth-child(3) {
     bottom: 50px;
@@ -39,7 +39,7 @@ section .color:nth-child(3) {
 }
 .loginBox .square {
     position: absolute;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(150px);
     box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-right: 1px solid rgba(255, 255, 255, 0.2);
